--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^4.17.17",
         "@types/node": "^20.4.5",
         "@types/ws": "^8.5.5",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -28,6 +29,7 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "express": "^4.18.2",
         "irc-message-ts": "^3.0.6",
         "ws": "^8.13.0"
     }
